Simplify event application on entities
Annotation @ApplyEvent has been removed. @Apply can now be used both on event and entity class.